--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,5 @@ exposed_version=0.20.1
 postgresql_version=42.2.2
 postgres_socket_version=1.0.15
 
-jsoup=1.10.3
+jsoup_version=1.10.3
+json_version=20190722
