--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile "com.google.cloud.sql:postgres-socket-factory:$postgres_socket_version"
 
     compile "org.jsoup:jsoup:$jsoup_version"
+    compile "com.ibm.icu:icu4j:$icu4j_version"
     compile "org.json:json:$json_version"
 }
