--- a/build.gradle
+++ b/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile "org.jsoup:jsoup:$jsoup_version"
     compile "com.ibm.icu:icu4j:$icu4j_version"
     compile "org.json:json:$json_version"
+    compile "org.seleniumhq.selenium:selenium-java:$selenium_version"
+    compile "com.google.guava:guava:$guava_version"
 }
