--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,5 @@ postgres_socket_version=1.0.15
 jsoup_version=1.10.3
 icu4j_version=65.1
 json_version=20190722
+selenium_version=3.141.59
+guava_version=28.2-jre
