--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ group 'com.group'
 version '0.0.1'
 
 sourceSets {
-    main.kotlin.srcDirs = [ 'src' ]
+    main {
+        kotlin.srcDirs = ['src', 'src/kotlin']
+        resources.srcDirs = ['src/resources']
+    }
 }
 
 repositories {
